--- a/Photograph landing page/index.html
+++ b/Photograph landing page/index.html
@@ -15,7 +15,7 @@
 
                 <p class="banner-text-para">Beutiful Natural Photography</p>
 
-                <a href="" class="banner-button">View Work</a>
+                <a href="#work" class="banner-button">View Work</a>
             </div>
 
             <div class="banner-img">
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="intro">
+        <div class="intro" id="work">
             <p class="intro-heading">Our Work</p>
         </div>
 
