--- a/popUp message/index.html
+++ b/popUp message/index.html
@@ -22,11 +22,11 @@
             </div>
         </div>
 
-        <div id="msg-container">
+        <div class="msg-container hidden">
             <div class="btn-container">
-                <button id="close">CLOSE</button>
+                <button class="close hidden">CLOSE</button>
             </div>
-            
+
             <p id="msg">Some dummy message waiting to be filled</p>
         </div>
 
