--- a/car driving game/index.html
+++ b/car driving game/index.html
@@ -12,7 +12,7 @@
     
     <div id="scoreboard">
         <p id="score">Score: 700</p>
-        <p id="game-over">Game Over</p>
+        <p id="game-over" class="hide-black">hello</p>
     </div>
 
     <div id="game-area">
@@ -23,6 +23,9 @@
             <div class="car" id="player-car">
 
             </div>
+
+            <div class="
+            enemy red car"></div>
         </div>
     </div>
     
