--- a/hulu clone/index.html
+++ b/hulu clone/index.html
@@ -144,7 +144,7 @@
 
         <p class="section-text bold">Switch plans or cancel anytime.^^</p>
 
-        <table id="plan-selection-table">
+        <table class="plan-selection-table">
             <tr id="sticky-table-row">
                 <th class="table-head-left no-border">
                     <img id="plan-selection-table-heading-logo" src="images/smaller-hulu,disney,espn-logo.svg" alt="">
@@ -304,9 +304,124 @@
             <td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
             </td>
             </tr>
+        </tr>
 
+        <tr class="borderless">
+            <td>
+                <p class="small-hero-text table-small-text">
+                    ^For current-season shows in the streaming library only
+                    ^^Switches from Live TV to Hulu take effect as of the next billing cycle
+                </p>
+            </td>
+        </tr>
+
+        <tr class="borderless">
+            <td>
+                <h3>Available Add-ons</h3>
+            </td>
+        </tr>
+
+        <tr class="borderless">
+            <td>
+                <p>Add-ons available at an additional cost.</p>
+            </td>
+        </tr>
+
+        <tr class="borderless last-borderless-text">
+            <td>
+                <p>Add them up after you sign up for Hulu.</p>
+            </td>
+        </tr>
+
+        <td class="td-head">HBO Max™
+        </td>
+        <td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+        </td>
+        <td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+        </td>
+        <td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+        </td>
+    </tr>
+
+</tr>
+<td class="td-head">CINEMAX®
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
+
+</tr>
+<td class="td-head">SHOWTIME®
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
+
+</tr>
+<td class="td-head">STARZ®
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
+
+</tr>
+<td class="td-head">Unlimited Screens
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
+
+</tr>
+<td class="td-head">Enhanced Cloud DVR
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
+
+</tr>
+<td class="td-head">Entertainment Add-on
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
+
+</tr>
+<td class="td-head">Espanol Add-onEspanol Add-on
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td highlighted-column"><img class="table-img center-align" src="images/table-images/cross.png" alt="">
+</td>
+<td class="center-align  td"><img class="table-img center-align" src="images/table-images/check.png" alt="">
+</td>
+</tr>
 
         </table>
+
     </section>
 
     <section id="footer">
