completed pipe animations

--- a/flappy bird/index.html
+++ b/flappy bird/index.html
@@ -8,10 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="some-element-you-want-to-animate">
+    <div id="game-area">
+        <div class="top-pipe pipe">
         
-    </div>
+        </div>
 
+        <div class="bottom-pipe pipe">
+        
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
