--- a/flappy bird/index.html
+++ b/flappy bird/index.html
@@ -16,6 +16,8 @@
         <div class="bottom-pipe pipe">
         
         </div>
+
+        <div id="player"></div>
     </div>
     <script src="script.js"></script>
 </body>
