--- a/hulu clone/index.html
+++ b/hulu clone/index.html
@@ -76,7 +76,7 @@
     <section id="info">
         <h2 class="small-green-heading">HULU + LIVE TV, NOW WITH DISNEY+ AND ESPN+</h2>
 
-        <h2 class="section-heading">Live TV Makes It Better</h2>
+        <h2 class="section-heading info-heading">Live TV Makes It Better</h2>
 
         <p class="section-text">
             Make the switch from cable. Get 75+ top channels on Hulu with<br> your favorite live sports, news,
@@ -427,71 +427,76 @@
     <section id="footer">
         <div class="layer-1">
             <div class="footer-col">
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <h2 class="footer-heading">BROWSE</h2>
+
+                <a class="footer-link" href="">Streaming Library</a>
+                <a class="footer-link" href="">live TV</a>
+                <a class="footer-link" href="">Live News</a>
+                <a class="footer-link" href="">Live Sports</a>
             </div>
 
             <div class="footer-col">
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <h2 class="footer-heading">BROWSE</h2>
+                <a class="footer-link" href="">TV Shows</a>
+                <a class="footer-link" href="">Movies</a>
+                <a class="footer-link" href="">Original</a>
+                <a class="footer-link" href="">Networks</a>
+                <a class="footer-link" href="">Kids</a>
+                <a class="footer-link" href="">FX</a>
             </div>
 
             <div class="footer-col">
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <h2 class="footer-heading">BROWSE</h2>
+                <a class="footer-link" href="">HBO MAX</a>
+                <a class="footer-link" href="">Cinemax</a>
+                <a class="footer-link" href="">Showtime</a>
+                <a class="footer-link" href="">STARZ</a>
             </div>
 
             <div class="footer-col">
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <h2 class="footer-heading">BROWSE</h2>
+                <a class="footer-link" href="">Hulu, Disney+, and ESPN+</a>
+                <a class="footer-link" href="">Hulu(No Ads), Disney+, and ESPN+</a>
+                <a class="footer-link" href="">Student Discount</a>
             </div>
 
             <div class="footer-col">
                 <h2 class="footer-heading">HELP</h2>
 
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <a class="footer-link" href="">Account & Billing</a>
+                <a class="footer-link" href="">Plans & Pricing</a>
+                <a class="footer-link" href="">Supported Devices</a>
+                <a class="footer-link" href="">Accessibility</a>
             </div>
 
             <div class="footer-col">
-                <h2 class="">ABOUT US</h2>
+                <h2 class="footer-heading">ABOUT US</h2>
 
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <a class="footer-link" href="">Shop Hulu</a>
+                <a class="footer-link" href="">Press</a>
+                <a class="footer-link" href="">Jobs</a>
+                <a class="footer-link" href="">Contact</a>
             </div>
         </div>
 
         <div class="layer-2">
             <div class="socials-icon-group">
-                <img class="social-icon" src="" alt="">
-                <img class="social-icon" src="" alt="">
-                <img class="social-icon" src="" alt="">
-                <img class="social-icon" src="" alt="">
+                <img class="social-icon" src="images/footer/facebook.png" alt="">
+                <img class="social-icon" src="images/footer/twitter.png" alt="">
+                <img class="social-icon" src="images/footer/youtube.png" alt="">
+                <img class="social-icon" src="images/footer/instagram.png" alt="">
             </div>
 
             <div class="misc-links">
                 <p>© 2021 Hulu, LLC</p>
 
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
-                <a class="footer-link" href=""></a>
+                <a class="footer-link" href="">About Ads</a>
+                <a class="footer-link" href="">Terms of Use</a>
+                <a class="footer-link" href="">Privacy Policy</a>
+                <a class="footer-link" href="">Do Not Sell My Personal Information</a>
+                <a class="footer-link" href="">Your California Privacy Rights</a>
+                <a class="footer-link" href="">TV Parental Guidelines</a>
+                <a class="footer-link" href="">Sitemap</a>
             </div>
         </div>
     </section>
