started respose design

--- a/Responsive Hiking Landing Page/index.html
+++ b/Responsive Hiking Landing Page/index.html
@@ -18,6 +18,7 @@
                 <li class="nav-item">Explore</li>
                 <li class="nav-item">About</li>
                 <li class="nav-item button">Contact</li>
+                <img  class="hide" id="hamburger" src="images/hamburger.png" alt="">
             </ul>
         </nav>
 
@@ -53,7 +54,7 @@
         <section id="s2">
             <div id="s2-content-container">
                 <h2 class="underline" id="h2-heading">Explore The World</h2>
-                <p id="s2-text" section-text>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium accusamus impedit quasi repellat sunt tempore<br> recusandae atque! Quisquam totam autem 
+                <p id="s2-text" class="section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium accusamus impedit quasi repellat sunt tempore recusandae atque! Quisquam totam autem 
                     aperiam adipisci in sunt ipsum!</p>
                 <a class="button" href="">Learn More</a>
             </div>
@@ -61,19 +62,19 @@
 
         <section id="s3">
             <div id="s3-content">
-                <h2 class="underline" id="s3-HEADING">UPCOMING TOURS & DESTINATION</h2>
+                <h2 class="underline" id="s3-heading">UPCOMING TOURS & DESTINATION</h2>
                 <P id="s3-text" class="section-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente ea, deleniti aut iure sequi culpa blanditiis. Sed odio at aliquid commodi, incidunt qui quas! 
                     Quod accusantium aperiam inventore quasi ex.</P>
                 <a class="button" href="">Learn More</a>
             </div>
-        </section>
 
-        <div id="s3-img-container">
-            <img class="s3-img" src="" alt="">
-            <img class="s3-img" src="" alt="">
-            <img class="s3-img" src="" alt="">
-            <img class="s3-img" src="" alt="">
-        </div>
+            <div id="s3-img-container">
+                <img class="s3-img" src="images/s4-1.jpg" alt="">
+                <img class="s3-img" src="images/s4-2.jpg" alt="">
+                <img class="s3-img" src="images/s4-3.jpg" alt="">
+                <img class="s3-img" src="images/s4-4.jpg" alt="">
+            </div>
+        </section>
     </main>
 
     <footer id="footer">
