--- a/nasheehah/index.html
+++ b/nasheehah/index.html
@@ -29,7 +29,9 @@
 
             <div id="layer-2">
                 <h2 class="mb-1 mt-1 medium-text">UPCOMING PRAY</h2>
-                <P class="mb-1 x-large-text" id="upcoming-pray"> ASR 00:00:00</P>
+                <div class="mb-1 x-large-text" id="upcoming-pray"> 
+                    <span id="upcoming-pray-name">ASR</span> <span id="upcoming-pray-time">00:00:00</span>
+                </div>
             </div>
 
             <div id="layer-3">
