--- a/Underwater landing page/index.html
+++ b/Underwater landing page/index.html
@@ -8,7 +8,35 @@
     <title>Underwater</title>
 </head>
 <body>
+    <header class="flex-box flex-column">
+        <nav class="flex-box flex-space-between">
+            <img src="" alt="Title">
+
+            <button>Sign Up</button>
+        </nav>
+
+        <div class="header-content">
+            <p>Welcome to our</p>
+            <h1>World's Creative Studio</h1>
+            <button>Take a tour</button>
+        </div>
+
+        <aside>
+            <button><img src="" alt=""></button>
     
+            <div id="social-icons-grp">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+    
+            <div id="misc-icons-grp">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </aside>
+    </header>
+
     <script src="scripts.js"></script>
 </body>
 </html>
