--- a/nasheehah/index.html
+++ b/nasheehah/index.html
@@ -93,6 +93,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="calendar-table">
+            <div id="calendar-left-content">
+                <h2 class="mb-1">Prayer Times in Midrand</h2>
+                <p class="gray-text small-text">Midrand, Gauteng, South Africa</p>
+            </div>
+
+            <form id="date-picker-form">
+                <input type="month" id="month-year-picker" name="month-year-picker" placeholder="Select month and year" required>
+
+                <input id="submit" type="submit">
+            </form>
+
+            <button id="show-button">hide</button>
+
+            <table id="hijri-calendar" class="bg-off-white">
+    
+            
+            </table>
+        </div>
     </main>
     <script src="scripts.js"></script>
 </body>
