--- a/nasheehah/index.html
+++ b/nasheehah/index.html
@@ -16,8 +16,8 @@
         <div id="prays-table">
             <div id="layer-1" class="mt-2">
                 <div id="layer-1-left-content">
-                    <h2 class="mb-1">Prayer Times in Midrand</h2>
-                    <p class="gray-text small-text">Midrand, Gauteng, South Africa</p>
+                    <h2 class="mb-1">Prayer Times in <span class="city">Midrand</span></h2>
+                    <p class="gray-text small-text"><span class="city">Midrand</span>, <span class="state">Midrand</span>, <span class="country">Midrand</span></p>
                 </div>
 
                 <div class="layer-1-right-content">
@@ -96,8 +96,8 @@
 
         <div class="calendar-table">
             <div id="calendar-left-content">
-                <h2 class="mb-1">Prayer Times in Midrand</h2>
-                <p class="gray-text small-text">Midrand, Gauteng, South Africa</p>
+                <h2 class="mb-1">Prayer Times in <span class="city">Midrand</span></h2>
+                <p class="gray-text small-text"><span class="city">Midrand</span>, <span class="state">Midrand</span>, <span class="country">Midrand</span></p>
             </div>
 
             <form id="date-picker-form">
