--- a/Underwater landing page/index.html
+++ b/Underwater landing page/index.html
@@ -10,10 +10,13 @@
 <body>
     <main>
         <header class="flex-box flex-column">
+            <div class="over-lay hide"></div>
             <nav class="top-margin-1 flex-box flex-space-between align-column-center-vertically">
                 <img id="logo" class="left-margin-4" src="images/logo.png" alt="logo">
     
                 <button id="btn" class="button right-margin-4">Sign Up</button>
+
+                <img id="menue" class="no-radius aside-img top-margin-1 hide" src="images/menu.png" alt="">
             </nav>
     
             <div class="header-content left-margin-4">
