--- a/Underwater landing page/index.html
+++ b/Underwater landing page/index.html
@@ -10,7 +10,27 @@
 <body>
     <main>
         <header class="flex-box flex-column">
-            <div class="over-lay hide"></div>
+            <div class="over-lay hide">
+                <div class="close-wrapper">
+                    <button id="close">X</button>
+                </div>
+
+                <div class="icons">
+                    <div id="social-icons-grp">
+                        <img class="aside-img" src="images/fb.png" alt="fb logog">
+                        <img class="aside-img" src="images/ig.png" alt="ig logo">
+                        <img class="aside-img" src="images/tw.png" alt="twitter logo">
+                    </div>
+            
+                    <div id="misc-icons-grp">
+                        <img class="aside-img" src="images/share.png" alt="share logo">
+                        <img class="aside-img" src="images/info.png" alt="question mark">
+                    </div>
+                </div>
+
+                <button id="btn" class="button right-margin-4">Sign Up</button>
+            </div>
+
             <nav class="top-margin-1 flex-box flex-space-between align-column-center-vertically">
                 <img id="logo" class="left-margin-4" src="images/logo.png" alt="logo">
     
@@ -30,7 +50,7 @@
                 <img class="bubble medium delay-5" src="images/bubble.png" alt="">
                 <img class="bubble small delay-2" src="images/bubble.png" alt="">
                 <img class="bubble medium delay-1" src="images/bubble.png" alt="">
-                <img class="bubble large delay-14" src="images/bubble.png" alt="">
+                <img class="bubble large delay-4" src="images/bubble.png" alt="">
                 <img class="bubble small delay-3" src="images/bubble.png" alt="">
             </div>
 
