--- a/recipe app/index.html
+++ b/recipe app/index.html
@@ -32,7 +32,7 @@
 
         </div>
 
-        <h2 class="pick-of-week center-text my-2">Picks of the week</h2>
+        <h2 class="pick-of-week center-text my-2">Random Picks</h2>
         
         <div class="meals-container">
             
