--- a/recipe app/index.html
+++ b/recipe app/index.html
@@ -32,9 +32,14 @@
 
         </div>
 
+        <h2 class="pick-of-week center-text my-2">Your Favourite Picks</h2>
+        <div class="favs-meal meals-container my-2">
+
+        </div>
+
         <h2 class="pick-of-week center-text my-2">Random Picks</h2>
         
-        <div class="meals-container">
+        <div class="random-meals meals-container">
             
         </div>
 
