--- a/recipe app/index.html
+++ b/recipe app/index.html
@@ -8,10 +8,11 @@
     <title>Recipe App</title>
 </head>
 <body>
+    <nav>
+        <p class="ml-1">Recipe App</p>
+        <button>save</button>
+    </nav>
     <header>
-        <nav>
-            <p class="ml-1">Recipe App</p>
-        </nav>
 
         <h1 class="ml-1 my-1">Recipes</h1>
         <p class="center-text mx-1 mb-1">
