--- a/notes app/index.html
+++ b/notes app/index.html
@@ -14,14 +14,20 @@
                 <button id="add-note">Add Note</button>
 
                 <div class="note">
-                    <h2>A Sample Note</h2>
+                    <h2>A Sample Note 1</h2>
                     <p class="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae...</p>
-                    
+
                     <p class="note-date">Thursday, 8 July 2021 at 20:06</p>
                 </div>
 
                 <div class="note">
-                    <h2>A Sample Note</h2>
+                    <h2>A Sample Note 2</h2>
+                    <p class="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae...</p>
+                    <p class="note-date">Thursday, 8 July 2021 at 20:06</p>
+                </div>
+
+                <div class="note">
+                    <h2>A Sample Note 3</h2>
                     <p class="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae...</p>
                     <p class="note-date">Thursday, 8 July 2021 at 20:06</p>
                 </div>
@@ -29,18 +35,17 @@
         </aside>
 
         <div class="note-display-container">
-            <h1>A Sample Note</h1>
+            <div>
+                <textarea class="note-display-container-header" cols="30" rows="1">
+                    A Sample Note
+                </textarea>
+            </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed omnis adipisci,
-                 deleniti vel deserunt pariatur! Eligendi tempora quis deserunt sunt ipsum 
-                 expedita veritatis perferendis? Porro veniam illum iusto officia nihil!
-            </p>
+            <div>
+                <textarea class="note-display-container-text">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero tempora
-                minus consectetur aliquam, voluptatum officia, exercitationem similique
-                adipisci architecto repudiandae voluptate beatae minima quidem at asperiores
-                commodi deserunt assumenda deleniti!
-            </p>
+                </textarea>
+            </div>
         </div>
     </main>
 <script src="script.js"></script>
