heading and textear

--- a/notes app/index.html
+++ b/notes app/index.html
@@ -35,17 +35,9 @@
         </aside>
 
         <div class="note-display-container">
-            <div>
-                <textarea class="note-display-container-header" cols="30" rows="1">
-                    A Sample Note
-                </textarea>
-            </div>
+            <input type="text" name="container-heading" class="container-heading" maxlength="30">
 
-            <div>
-                <textarea class="note-display-container-text">
-
-                </textarea>
-            </div>
+            <textarea name="container-text" class="container-text">Hello World</textarea>
         </div>
     </main>
 <script src="script.js"></script>
