--- a/notes app/index.html
+++ b/notes app/index.html
@@ -13,6 +13,7 @@
             <div class="all-notes-container-narrow">
                 <button id="add-note">Add Note</button>
 
+                <!--
                 <div class="note">
                     <h2>A Sample Note 1</h2>
                     <p class="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae...</p>
@@ -31,13 +32,15 @@
                     <p class="note-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae...</p>
                     <p class="note-date">Thursday, 8 July 2021 at 20:06</p>
                 </div>
+                -->
+
             </div>
         </aside>
 
         <div class="note-display-container">
             <input type="text" name="container-heading" class="container-heading" maxlength="30">
 
-            <textarea name="container-text" class="container-text">Hello World</textarea>
+            <textarea name="container-text" class="container-text"></textarea>
         </div>
     </main>
 <script src="script.js"></script>
