main-container complated

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     
-    <div class="main-weather-details-container">
-        <h1>the weather</h1>
+    <div class="main-weather-details-container pl-2 pt-2 pb-4">
+        <h1 class="small-heading">the weather</h1>
 
         <div class="main-weather-details">
-            <p id="temp-celsius">22 C</p>
+            <p id="temp-celsius">22&deg;</p>
 
             <div class="main-weather-details-column-wrapper">
-                <p id="city">Cape Town</p>
+                <p id="city" class="bold">Cape Town</p>
                 <p id="date">21:00 - Friday 9, 10 2021</p>
             </div>
 
             <div class="main-weather-details-column-wrapper">
                 <img id="conditions-icon" src="" alt="">
-                <p id="conditions"></p>
+                <p id="conditions">Cloudy</p>
             </div>
         </div>
     </div>
