--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -17,12 +17,12 @@
 
             <div class="main-weather-details-column-wrapper">
                 <p id="city" class="bold">Cape Town</p>
-                <p id="date">21:00 - Friday 9, 10 2021</p>
+                <p id="date">21:00 - Friday 9,<br> 10 2021</p>
             </div>
 
             <div class="main-weather-details-column-wrapper">
-                <img id="conditions-icon" src="" alt="">
-                <p id="conditions">Cloudy</p>
+                <img id="current-day-condition-icon" class="conditions-icon" src="" alt="">
+                <p id="current-day-condition" class="conditions">Cloudy</p>
             </div>
         </div>
     </div>
@@ -62,6 +62,23 @@
             <div class="space-between mb-2">
                 <p class="bold">Wind</p>
                 <p id="wind-stat">25.9km/h</p>
+            </div>
+
+            <h2 class="small-heading mb-2">Upcoming forecast</h2>
+            <div class="forecast-container">
+                <div class="main-weather-details-column-wrapper mb-2">
+                    <p id="next-day-1-temp">11</p>
+                    <p id="next-day-1-date" >11/11/11</p>
+                    <img id="next-day-1-condition-icon" class="conditions-icon" src="" alt="">
+                    <p id="next-day-1-condition" class="conditions">Cloudy</p>
+                </div>
+
+                <div class="main-weather-details-column-wrapper mb-2">
+                    <p id="next-day-2-temp">11</p>
+                    <p id="next-day-2-date" >11/11/11</p>
+                    <img id="next-day-2-condition-icon" class="conditions-icon" src="" alt="">
+                    <p id="next-day-2-condition" class="conditions">Cloudy</p>
+                </div>
             </div>
         </div>
     </div>
