--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -39,10 +39,10 @@
 
         <div class="locations mb-3">
             <ul>
-                <li class="mb-2"><a href="">New York</a></li>
-                <li class="mb-2"><a href="">California</a></li>
-                <li class="mb-2"><a href="">Paris</a></li>
-                <li class="mb-2"><a href="">Tokyo</a></li>
+                <li class="mb-2"><button href="">New York</button></li>
+                <li class="mb-2"><button href="">California</button></li>
+                <li class="mb-2"><button href="">Paris</button></li>
+                <li class="mb-2"><button href="">Tokyo</button></li>
             </ul>
         </div>
 
