--- a/rock, paper, scissors/index.html
+++ b/rock, paper, scissors/index.html
@@ -23,14 +23,14 @@
     <p id="winner">Player Wins</p>
 
     <div class="img-container">
-        <img src="images/scissors.svg" id="player-move">
-        <img src="images/scissors.svg" id="computer-move" class="flip-img">
+        <img src="images/rock.svg" id="player-move" class="player-img">
+        <img src="images/rock.svg" id="computer-move" class="com-img">
     </div>
 
     <div class="moves-container">
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissor">scissor</button>
+        <button data-move="rock" id="rock">rock</button>
+        <button data-move="paper" id="paper">paper</button>
+        <button data-move="scissors" id="scissors">scissor</button>
     </div>
     <script src="script.js"></script>
 </body>
